Bug 1783442 Fix cases where case sensitivy matters in WebExtensionPolicy r=zombie

Differential Revision: https://phabricator.services.mozilla.com/D153867