toolkit/components/extensions/ExtensionPolicyService.h
@@ -72,7 +72,9 @@ class ExtensionPolicyService final : public nsIAddonPolicyService,
   WebExtensionPolicy* GetByURL(const extensions::URLInfo& aURL);
 
   WebExtensionPolicy* GetByHost(const nsACString& aHost) const {
-    return mExtensionHosts.GetWeak(aHost);
+    nsAutoCString host;
+    ToLowerCase(aHost, host);
+    return mExtensionHosts.GetWeak(host);
   }
 
   void GetAll(nsTArray<RefPtr<WebExtensionPolicy>>& aResult);
